--- a/GNN_Solubility.ipynb
+++ b/GNN_Solubility.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEYFC0BN3HyssnjteVwsF+",
+      "authorship_tag": "ABX9TyOrs9ymMq0k2vPbhYXhAktE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,9 +114,13 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
         "criterion = torch.nn.MSELoss()\n",
         "\n",
-        "# Initialize lists to store metrics\n",
+        "# Initialize lists to store metrics and predictions\n",
         "train_losses = []\n",
         "val_rmse_list = []\n",
+        "train_predictions = []\n",
+        "train_actuals = []\n",
+        "test_predictions = []\n",
+        "test_actuals = []\n",
         "\n",
         "# Define functions for training and validation\n",
         "def train():\n",
@@ -131,6 +135,11 @@
         "        loss.backward()\n",
         "        optimizer.step()\n",
         "        total_loss += loss.item()\n",
+        "\n",
+        "        # Collect training predictions\n",
+        "        train_predictions.append(out.cpu().detach().numpy())\n",
+        "        train_actuals.append(label.cpu().numpy())\n",
+        "\n",
         "    return total_loss / len(train_graphs)\n",
         "\n",
         "def validate():\n",
@@ -143,11 +152,16 @@
         "            out = model(graph)\n",
         "            loss = criterion(out.squeeze(), label)\n",
         "            val_loss += loss.item()\n",
+        "\n",
+        "            # Collect test predictions\n",
+        "            test_predictions.append(out.cpu().detach().numpy())\n",
+        "            test_actuals.append(label.cpu().numpy())\n",
+        "\n",
         "    rmse = np.sqrt(val_loss / len(test_graphs))\n",
         "    return rmse\n",
         "\n",
         "# Training loop with early stopping and model checkpointing based on RMSE\n",
-        "num_epochs = 100\n",
+        "num_epochs = 10\n",
         "best_rmse = float('inf')\n",
         "\n",
         "for epoch in range(num_epochs):\n",
@@ -187,7 +201,7 @@
         "# Plotting the metrics\n",
         "epochs = range(1, len(train_losses) + 1)\n",
         "\n",
-        "plt.figure(figsize=(12, 8))\n",
+        "plt.figure(figsize=(12, 12))\n",
         "\n",
         "# Training Loss\n",
         "plt.subplot(3, 1, 1)\n",
@@ -205,20 +219,41 @@
         "plt.title('Epoch vs Validation RMSE')\n",
         "plt.legend()\n",
         "\n",
-        "# Accuracy (if applicable) - Note: In regression, accuracy is not used, but you can plot other metrics if needed.\n",
-        "# For example, if using classification, you would plot accuracy here.\n",
+        "# Predicted vs Actual (Train)\n",
+        "plt.subplot(3, 1, 3)\n",
+        "train_predictions = np.concatenate(train_predictions)\n",
+        "train_actuals = np.concatenate(train_actuals)\n",
+        "plt.scatter(train_actuals, train_predictions, alpha=0.5)\n",
+        "plt.plot([train_actuals.min(), train_actuals.max()], [train_actuals.min(), train_actuals.max()], 'r--', lw=2)\n",
+        "plt.xlabel('Actual Values')\n",
+        "plt.ylabel('Predicted Values')\n",
+        "plt.title('Train Predicted vs Actual')\n",
+        "plt.grid(True)\n",
         "\n",
         "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Plot Predicted vs Actual (Test)\n",
+        "plt.figure(figsize=(6, 6))\n",
+        "test_predictions = np.concatenate(test_predictions)\n",
+        "test_actuals = np.concatenate(test_actuals)\n",
+        "plt.scatter(test_actuals, test_predictions, alpha=0.5)\n",
+        "plt.plot([test_actuals.min(), test_actuals.max()], [test_actuals.min(), test_actuals.max()], 'r--', lw=2)\n",
+        "plt.xlabel('Actual Values')\n",
+        "plt.ylabel('Predicted Values')\n",
+        "plt.title('Test Predicted vs Actual')\n",
+        "plt.grid(True)\n",
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "i0YXdslNxIWc",
-        "outputId": "5396e5b3-2459-44e1-d9d7-7d36e7068eea",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "i0YXdslNxIWc",
+        "outputId": "5396e5b3-2459-44e1-d9d7-7d36e7068eea"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +300,63 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (2.0.7)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (2024.8.30)\n",
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from sympy->torch) (1.3.0)\n",
-            "Epoch 1/100, Train Loss: 6304.4975, Val RMSE: 83.4173\n"
+            "Epoch 1/100, Train Loss: 6304.4975, Val RMSE: 83.4173\n",
+            "Epoch 2/100, Train Loss: 6218.9940, Val RMSE: 83.1607\n",
+            "Epoch 3/100, Train Loss: 6181.1014, Val RMSE: 82.9472\n",
+            "Epoch 4/100, Train Loss: 6161.1046, Val RMSE: 82.8024\n",
+            "Epoch 5/100, Train Loss: 6150.0767, Val RMSE: 82.6904\n",
+            "Epoch 6/100, Train Loss: 6143.7469, Val RMSE: 82.6122\n",
+            "Epoch 7/100, Train Loss: 6136.6788, Val RMSE: 82.5472\n",
+            "Epoch 8/100, Train Loss: 6131.9603, Val RMSE: 82.4777\n",
+            "Epoch 9/100, Train Loss: 6127.5112, Val RMSE: 82.4062\n",
+            "Epoch 10/100, Train Loss: 6122.4144, Val RMSE: 82.3441\n",
+            "Epoch 11/100, Train Loss: 6118.4768, Val RMSE: 82.2911\n",
+            "Epoch 12/100, Train Loss: 6115.3136, Val RMSE: 82.2416\n",
+            "Epoch 13/100, Train Loss: 6112.3584, Val RMSE: 82.2004\n",
+            "Epoch 14/100, Train Loss: 6110.2681, Val RMSE: 82.1740\n",
+            "Epoch 15/100, Train Loss: 6108.9904, Val RMSE: 82.1546\n",
+            "Epoch 16/100, Train Loss: 6107.8984, Val RMSE: 82.1348\n",
+            "Epoch 17/100, Train Loss: 6107.1908, Val RMSE: 82.1124\n",
+            "Epoch 18/100, Train Loss: 6105.5338, Val RMSE: 82.0940\n",
+            "Epoch 19/100, Train Loss: 6104.5455, Val RMSE: 82.0764\n",
+            "Epoch 20/100, Train Loss: 6103.5784, Val RMSE: 82.0571\n",
+            "Epoch 21/100, Train Loss: 6102.4762, Val RMSE: 82.0341\n",
+            "Epoch 22/100, Train Loss: 6101.0368, Val RMSE: 82.0054\n",
+            "Epoch 23/100, Train Loss: 6099.2116, Val RMSE: 81.9688\n",
+            "Epoch 24/100, Train Loss: 6096.9120, Val RMSE: 81.9266\n",
+            "Epoch 25/100, Train Loss: 6094.5380, Val RMSE: 81.8892\n",
+            "Epoch 26/100, Train Loss: 6092.7428, Val RMSE: 81.8629\n",
+            "Epoch 27/100, Train Loss: 6091.4795, Val RMSE: 81.8387\n",
+            "Epoch 28/100, Train Loss: 6090.1839, Val RMSE: 81.8121\n",
+            "Epoch 29/100, Train Loss: 6088.7770, Val RMSE: 81.7872\n",
+            "Epoch 30/100, Train Loss: 6087.6737, Val RMSE: 81.7671\n",
+            "Epoch 31/100, Train Loss: 6086.6619, Val RMSE: 81.7454\n",
+            "Epoch 32/100, Train Loss: 6085.5600, Val RMSE: 81.7204\n",
+            "Epoch 33/100, Train Loss: 6084.2385, Val RMSE: 81.6941\n",
+            "Epoch 34/100, Train Loss: 6083.0787, Val RMSE: 81.6750\n",
+            "Epoch 35/100, Train Loss: 6082.3438, Val RMSE: 81.6590\n",
+            "Epoch 36/100, Train Loss: 6081.5496, Val RMSE: 81.6413\n",
+            "Epoch 37/100, Train Loss: 6080.8766, Val RMSE: 81.6206\n",
+            "Epoch 38/100, Train Loss: 6079.6756, Val RMSE: 81.5973\n",
+            "Epoch 39/100, Train Loss: 6078.6371, Val RMSE: 81.5777\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-94ec7641238f>\u001b[0m in \u001b[0;36m<cell line: 122>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m     \u001b[0mtrain_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m     \u001b[0mval_rmse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-3-94ec7641238f>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m         \u001b[0mtotal_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtotal_loss\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_graphs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/optim/optimizer.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    482\u001b[0m                             )\n\u001b[1;32m    483\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 484\u001b[0;31m                 \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    485\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_optimizer_step_code\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    486\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/optim/optimizer.py\u001b[0m in \u001b[0;36m_use_grad\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     87\u001b[0m             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_grad_enabled\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefaults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"differentiable\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dynamo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_break\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m             \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dynamo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_break\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/optim/adam.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    224\u001b[0m             )\n\u001b[1;32m    225\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 226\u001b[0;31m             adam(\n\u001b[0m\u001b[1;32m    227\u001b[0m                 \u001b[0mparams_with_grad\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    228\u001b[0m                 \u001b[0mgrads\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/optim/optimizer.py\u001b[0m in \u001b[0;36mmaybe_fallback\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    159\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mdisabled_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 161\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    162\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mmaybe_fallback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/optim/adam.py\u001b[0m in \u001b[0;36madam\u001b[0;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, foreach, capturable, differentiable, fused, grad_scale, found_inf, has_complex, amsgrad, beta1, beta2, lr, weight_decay, eps, maximize)\u001b[0m\n\u001b[1;32m    764\u001b[0m         \u001b[0mfunc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_single_tensor_adam\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    765\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 766\u001b[0;31m     func(\n\u001b[0m\u001b[1;32m    767\u001b[0m         \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    768\u001b[0m         \u001b[0mgrads\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/optim/adam.py\u001b[0m in \u001b[0;36m_single_tensor_adam\u001b[0;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, grad_scale, found_inf, amsgrad, has_complex, beta1, beta2, lr, weight_decay, eps, maximize, capturable, differentiable)\u001b[0m\n\u001b[1;32m    377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    378\u001b[0m         \u001b[0;31m# Decay the first and second moment running average coefficient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 379\u001b[0;31m         \u001b[0mexp_avg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlerp_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mbeta1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    380\u001b[0m         \u001b[0mexp_avg_sq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbeta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddcmul_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mbeta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    381\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
