--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyOkwS60pBQ4kjaV2VrbTfSl",
+      "authorship_tag": "ABX9TyNiYp61xFHRceRpK73KDMDy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,27 +44,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "8DjqvLTnJB_3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fe761d96-39f3-43ee-886c-26192f7f5fe2"
+        "id": "8DjqvLTnJB_3"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.10/dist-packages (1.0.4)\n",
-            "Requirement already satisfied: googledrivedownloader in /usr/local/lib/python3.10/dist-packages (0.4)\n",
-            "1/1 [==============================] - 0s 55ms/step\n",
-            "[[39.01761]] mg/ml\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install pubchempy\n",
         "!pip install googledrivedownloader\n",
@@ -83,11 +68,11 @@
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "# Load Model\n",
-        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=False)\n",
         "\n",
         "# Drug and Excipient CID\n",
         "Drug_CID = 135398740 #@param {type:\"number\"}\n",
-        "Excipient_CID = 1030 #@param {type:\"number\"}\n",
+        "Excipient_CID = 10850 #@param {type:\"number\"}\n",
         "\n",
         "# Fetch logP and Mol. Wt of Drug and Excipient\n",
         "logp_D = pcp.Compound.from_cid(Drug_CID).xlogp\n",
@@ -230,7 +215,7 @@
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
-        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= False)\n",
         "\n",
         "df = pd.read_excel('/content/Predict.xlsx')\n",
         "df1 = df.iloc[:, 0:1]\n",
@@ -319,7 +304,7 @@
         "                                   dest_path='/content/sample_data/SOLModel.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
-        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= False)\n",
         "\n",
         "Drug_SMILE = \"C1CO1.C(C(CO)O)O\" #@param {type:\"string\"}\n",
         "Excipient_SMILE = \"COC1=C(C=CC(=C1)C=CC(=O)O)O\" #@param {type:\"string\"}\n",
@@ -399,7 +384,7 @@
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
-        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=False)\n",
         "\n",
         "from google.colab import files\n",
         "uploaded = files.upload()\n",
