--- a/Sol_ME_LogP_MolWt.ipynb
+++ b/Sol_ME_LogP_MolWt.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "CYDFYbE7Lwxg",
         "outputId": "e4f2f65f-c0d8-4118-9f91-ecf1998c309c",
@@ -56,113 +56,18 @@
         "print(dataset)"
       ],
       "metadata": {
-        "id": "pwFuJMj72rkO",
-        "outputId": "2434fb3c-ae7a-4cd7-f1c1-c7ab68f5e9cb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "pwFuJMj72rkO"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[272.25 611.7    2.4  ...   0.     0.     4.86]\n",
-            " [272.25 356.5    2.4  ...   0.     0.    15.57]\n",
-            " [272.25 354.5    2.4  ...   0.     0.    27.58]\n",
-            " ...\n",
-            " [477.4  621.     3.   ...   0.     0.     6.66]\n",
-            " [477.4  354.5    3.   ...   0.     0.     6.66]\n",
-            " [477.4  356.5    3.   ...   0.     0.     6.66]]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "id": "_PkGWMn0MR2W",
-        "outputId": "2ad11974-17b3-4ec9-e7ca-90fcf56feaf9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_PkGWMn0MR2W"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<bound method NDFrame.head of      0     1     2     3     4     5     6     7     8     9     ...  \\\n",
-            "0       0     0     0     0     1     1     0     0     0     0  ...   \n",
-            "1       0     0     0     0     1     1     0     0     0     0  ...   \n",
-            "2       0     0     0     0     1     1     0     0     0     0  ...   \n",
-            "3       0     0     0     0     1     1     0     0     0     0  ...   \n",
-            "4       0     0     0     0     1     1     0     0     0     0  ...   \n",
-            "..    ...   ...   ...   ...   ...   ...   ...   ...   ...   ...  ...   \n",
-            "287     0     0     0     0     1     1     1     0     0     0  ...   \n",
-            "288     0     0     0     0     1     1     1     0     0     0  ...   \n",
-            "289     0     0     0     0     1     1     1     0     0     0  ...   \n",
-            "290     0     1     0     0     1     1     1     0     0     0  ...   \n",
-            "291     0     0     0     0     1     1     1     0     0     0  ...   \n",
-            "\n",
-            "                    1756                 1757                 1758  \\\n",
-            "0                      0                    0                    0   \n",
-            "1                      0                    0                    0   \n",
-            "2                      0                    0                    0   \n",
-            "3                      0                    0                    0   \n",
-            "4                      0                    0                    0   \n",
-            "..                   ...                  ...                  ...   \n",
-            "287                    0                    0                    0   \n",
-            "288                    0                    0                    0   \n",
-            "289                    0                    0                    0   \n",
-            "290                    0                    0                    0   \n",
-            "291 -9223372036854775808 -9223372036854775808 -9223372036854775808   \n",
-            "\n",
-            "                    1759                 1760                 1761  \\\n",
-            "0                      0                    0                    0   \n",
-            "1                      0                    0                    0   \n",
-            "2                      0                    0                    0   \n",
-            "3                      0                    0                    0   \n",
-            "4                      0                    0                    0   \n",
-            "..                   ...                  ...                  ...   \n",
-            "287                    0                    0                    0   \n",
-            "288                    0                    0                    0   \n",
-            "289                    0                    0                    0   \n",
-            "290                    0                    0                    0   \n",
-            "291 -9223372036854775808 -9223372036854775808 -9223372036854775808   \n",
-            "\n",
-            "                    1762                 1763                 1764  \\\n",
-            "0                      0                    0                    0   \n",
-            "1                      0                    0                    0   \n",
-            "2                      0                    0                    0   \n",
-            "3                      0                    0                    0   \n",
-            "4                      0                    0                    0   \n",
-            "..                   ...                  ...                  ...   \n",
-            "287                    0                    0                    0   \n",
-            "288                    0                    0                    0   \n",
-            "289                    0                    0                    0   \n",
-            "290                    0                    0                    0   \n",
-            "291 -9223372036854775808 -9223372036854775808 -9223372036854775808   \n",
-            "\n",
-            "                    1765  \n",
-            "0                      0  \n",
-            "1                      0  \n",
-            "2                      0  \n",
-            "3                      0  \n",
-            "4                      0  \n",
-            "..                   ...  \n",
-            "287                    0  \n",
-            "288                    0  \n",
-            "289                    0  \n",
-            "290                    0  \n",
-            "291 -9223372036854775808  \n",
-            "\n",
-            "[292 rows x 1766 columns]>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "X1 = dataset[:,0:1]/1000 #(standardize wiht 1000)Mol.Wt of Drug\n",
         "X2 = dataset[:,1:2]/1000 #(standardize wiht 1000)Mol Wt of Carrier\n",
@@ -181,35 +86,6 @@
         "#print(Y, Y.shape, Y.dtype)\n",
         "#print(X, X.shape,Y, Y.shape)\n",
         "print(pd.DataFrame(X).head)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(Y)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DELIMJX7IUBy",
-        "outputId": "d33dbe7e-0b1a-423f-aa6d-e3e2bf112f86"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[ 4.86]\n",
-            " [15.57]\n",
-            " [27.58]\n",
-            " ...\n",
-            " [ 6.66]\n",
-            " [ 6.66]\n",
-            " [ 6.66]]\n"
-          ]
-        }
       ]
     },
     {
@@ -5479,7 +5355,7 @@
         "id": "ZqzkZI2eCIFr",
         "outputId": "07ea525d-7525-49c4-a250-aa37eb9cc51b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5520,7 +5396,7 @@
           "height": 472
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5536,7 +5412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "j7h6tGeSEZ3S",
         "cellView": "form",
@@ -5815,13 +5691,165 @@
       "metadata": {
         "id": "gyEZaxf7eY6j"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pubchempy\n",
+        "import pubchempy as pcp\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Load your dataset\n",
+        "data = pd.read_csv(\"Data.csv\")\n",
+        "\n",
+        "# Function to fetch SMILES from PubChem CID\n",
+        "def cid_to_smiles(cid):\n",
+        "    try:\n",
+        "        compound = pcp.Compound.from_cid(cid)\n",
+        "        return compound.isomeric_smiles\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error fetching SMILES for CID {cid}: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "# Generate SMILES for Drugs\n",
+        "print(\"Generating Drug SMILES...\")\n",
+        "data['Drug_SMILES'] = data['DRUG'].apply(cid_to_smiles)\n",
+        "\n",
+        "# Generate SMILES for Carriers\n",
+        "print(\"Generating Carrier SMILES...\")\n",
+        "data['Carrier_SMILES'] = data['CARRIER'].apply(cid_to_smiles)\n",
+        "\n",
+        "# Save updated dataset with SMILES\n",
+        "data.to_csv(\"Data_with_SMILES.csv\", index=False)\n",
+        "print(\"SMILES generation complete! File saved as Data_with_SMILES.csv.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cQto8ltUZLaV",
+        "outputId": "3882306d-1068-411f-a45d-04c5cc9ec8fe"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.10/dist-packages (1.0.4)\n",
+            "Generating Drug SMILES...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from rdkit import Chem\n",
+        "from rdkit.Chem import AllChem, MACCSkeys\n",
+        "from rdkit.Chem.rdmolops import RDKFingerprint\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import layers, models\n",
+        "import warnings\n",
+        "\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "# Load the dataset\n",
+        "data = pd.read_csv(\"Data.csv\")\n",
+        "\n",
+        "# Step 1: Function to generate fingerprints\n",
+        "def generate_fingerprints(smiles_list, fingerprint_type):\n",
+        "    fingerprints = []\n",
+        "    for smiles in smiles_list:\n",
+        "        mol = Chem.MolFromSmiles(smiles)\n",
+        "        if mol:\n",
+        "            if fingerprint_type == \"PubChem\":\n",
+        "                raise NotImplementedError(\"PubChem fingerprints should be precomputed externally.\")\n",
+        "            elif fingerprint_type == \"ECFP\":\n",
+        "                fp = AllChem.GetMorganFingerprintAsBitVect(mol, radius=2, nBits=1024)\n",
+        "            elif fingerprint_type == \"MACCS\":\n",
+        "                fp = MACCSkeys.GenMACCSKeys(mol)\n",
+        "            elif fingerprint_type == \"RDKit\":\n",
+        "                fp = RDKFingerprint(mol)\n",
+        "            else:\n",
+        "                raise ValueError(\"Unsupported fingerprint type: \" + fingerprint_type)\n",
+        "            fingerprints.append(np.array(fp))\n",
+        "        else:\n",
+        "            fingerprints.append(None)\n",
+        "    return np.array(fingerprints)\n",
+        "\n",
+        "# Step 2: Add fingerprints to the dataset\n",
+        "fingerprint_types = [\"ECFP\", \"MACCS\", \"RDKit\"]\n",
+        "fingerprint_data = {}\n",
+        "\n",
+        "for fp_type in fingerprint_types:\n",
+        "    print(f\"Generating {fp_type} fingerprints...\")\n",
+        "    drug_fps = generate_fingerprints(data['Drug_SMILES'], fp_type)\n",
+        "    carrier_fps = generate_fingerprints(data['Carrier_SMILES'], fp_type)\n",
+        "    combined_fps = [np.concatenate([d, c]) for d, c in zip(drug_fps, carrier_fps) if d is not None and c is not None]\n",
+        "    fingerprint_data[fp_type] = np.array(combined_fps)\n",
+        "\n",
+        "# Step 3: Add MW and LogP to combined features\n",
+        "print(\"Combining fingerprints with MW and LogP...\")\n",
+        "mw_logp_features = data[[\"MW_D\", \"MW_C\", \"LogP_D\", \"LogP_C\"]].values\n",
+        "for fp_type in fingerprint_types:\n",
+        "    fingerprint_data[fp_type] = np.hstack((fingerprint_data[fp_type], mw_logp_features))\n",
+        "\n",
+        "# Step 4: Train models and compare fingerprints\n",
+        "results = []\n",
+        "\n",
+        "def build_model(input_dim):\n",
+        "    model = models.Sequential([\n",
+        "        layers.Input(shape=(input_dim,)),\n",
+        "        layers.Dense(128, activation='relu'),\n",
+        "        layers.Dense(64, activation='relu'),\n",
+        "        layers.Dense(32, activation='relu'),\n",
+        "        layers.Dense(1)  # Output layer for regression\n",
+        "    ])\n",
+        "    model.compile(optimizer='adam', loss='mse', metrics=['mse'])\n",
+        "    return model\n",
+        "\n",
+        "for fp_type in fingerprint_types:\n",
+        "    print(f\"Training model for {fp_type} fingerprints...\")\n",
+        "    X = fingerprint_data[fp_type]\n",
+        "    y = data[\"SOLUBILITY\"].values\n",
+        "\n",
+        "    # Train/test split\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "    # Build and train the model\n",
+        "    model = build_model(X.shape[1])\n",
+        "    model.fit(X_train, y_train, epochs=100, batch_size=32, verbose=0)\n",
+        "\n",
+        "    # Evaluate the model\n",
+        "    y_pred = model.predict(X_test)\n",
+        "    rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+        "    r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "    print(f\"Results for {fp_type}: RMSE = {rmse}, R² = {r2}\")\n",
+        "    results.append({\"Fingerprint\": fp_type, \"RMSE\": rmse, \"R2\": r2})\n",
+        "\n",
+        "# Step 5: Save results\n",
+        "results_df = pd.DataFrame(results)\n",
+        "results_df.to_csv(\"Fingerprint_Comparison_Results.csv\", index=False)\n",
+        "print(\"Comparison complete! Results saved to Fingerprint_Comparison_Results.csv.\")\n"
+      ],
+      "metadata": {
+        "id": "ulMMEI-aYufk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNF9itTiIK4576dSLEe0NMP",
+      "authorship_tag": "ABX9TyMuZJOqTPaukKAtU8QVCTKh",
       "include_colab_link": true
     },
     "kernelspec": {
