--- a/Sol_ME_LogP_MolWt.ipynb
+++ b/Sol_ME_LogP_MolWt.ipynb
@@ -5759,7 +5759,7 @@
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "# Load the dataset\n",
-        "data = pd.read_csv(\"Data.csv\")\n",
+        "data = pd.read_csv(\"Data_with_SMILES.csv\")\n",
         "\n",
         "# Step 1: Function to generate fingerprints\n",
         "def generate_fingerprints(smiles_list, fingerprint_type):\n",
@@ -5849,7 +5849,7 @@
     "colab": {
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMuZJOqTPaukKAtU8QVCTKh",
+      "authorship_tag": "ABX9TyPdtkKMYdANetcWkyZPkM+Z",
       "include_colab_link": true
     },
     "kernelspec": {
