--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V28",
-      "authorship_tag": "ABX9TyNCQg1+0T4Zt/L0yAcju69U",
+      "authorship_tag": "ABX9TyM2kOZD+qbgObRri0i85jiW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "TPU"
+    }
   },
   "cells": [
     {
@@ -52,7 +50,8 @@
       "outputs": [],
       "source": [
         "!pip install pubchempy\n",
-        "!pip install googledrivedownloader\n",
+        "!pip install gdown\n",
+        "\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -62,11 +61,13 @@
         "from sklearn.preprocessing import OneHotEncoder\n",
         "from keras.models import load_model\n",
         "import time as tm\n",
-        "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+        "import gdown\n",
         "\n",
-        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
-        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
-        "                                   unzip=False)\n",
+        "file_id = '19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n'  # Replace with your actual file ID\n",
+        "destination = '/content/sample_data/Sol_ME.hdf5'  # Desired destination path\n",
+        "\n",
+        "gdown.download(f'https://drive.google.com/uc?id={file_id}', destination, quiet=False)\n",
+        "\n",
         "# Load Model\n",
         "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=False)\n",
         "\n",
@@ -116,8 +117,9 @@
       "cell_type": "code",
       "source": [
         "#@title #**OPTION : 2** - Insert PubChem CID of Drug and Carrier (Oil, Surfactant, Cosurfactant), LogP and Moleculr Weights\n",
-        "!pip install pubchempy\n",
-        "!pip install googledrivedownloader\n",
+        "!!pip install pubchempy\n",
+        "!pip install gdown\n",
+        "\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -127,13 +129,16 @@
         "from sklearn.preprocessing import OneHotEncoder\n",
         "from keras.models import load_model\n",
         "import time as tm\n",
-        "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+        "import gdown\n",
         "\n",
-        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
-        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
-        "                                   unzip=False)\n",
-        "#Load Model\n",
-        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= False)\n",
+        "file_id = '19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n'  # Replace with your actual file ID\n",
+        "destination = '/content/sample_data/Sol_ME.hdf5'  # Desired destination path\n",
+        "\n",
+        "gdown.download(f'https://drive.google.com/uc?id={file_id}', destination, quiet=False)\n",
+        "\n",
+        "# Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=False)\n",
+        "\n",
         "\n",
         "\n",
         "Drug_CID =  24872560#@param {type:\"number\"}\n",
@@ -560,7 +565,7 @@
           "height": 694
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
